Fixed bugs with column levelling after a sorting button was clicked. Added new, more readable font to nav. Fixed modal to be full height again.

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
     background-color: #282c34;
     min-height: 100vh;
     overflow-x: hidden;
+    user-select: none;
 
     nav {
         height: 47px;
@@ -22,7 +23,7 @@
                 height: 29px;
                 left: 20px;
                 position: absolute;
-                background: #000000;
+                background: #4D555F;
                 transform: rotate(90deg);
                 margin: 0 0 -20px;
                 border-radius: 3px;
@@ -77,12 +78,12 @@
                 text-align: center;
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
                 list-style-type: none;
-                color: #000000;
+                color: #4D555F;
                 cursor: pointer;
                 font-weight: bold;
 
                 &.true {
-                    border-bottom: 2px #000000 solid;
+                    border-bottom: 2px #4D555F solid;
                 }
             }
         }
@@ -134,6 +135,7 @@
     }
 
     .modal {
+        top: 0;
         z-index: 1;
         width: 100%;
         height: 100%;
